# LCT2

./: .gitignore  CMakeLists.txt  LCT2tracker.cpp  LCT2tracker.h  LCT2的c++实现.pptx  README.md  assignToBins1.cpp  assignToBins1.h  detector.cpp  detector.h  fhog.cpp  fhog.h  main.cpp  util.cpp  util.h
